# llamaherder

./: .clai.db  .gitignore  .json  .pre-commit-config.yaml  .pypirc.template  DEVELOPMENT_PLAN.md  MANIFEST.in  PROJECT_PLAN.md  PUBLISHING.md  README.md  README.md.backup.20250609_151415  alt_text_cache.json  install.bat  install.sh.backup.20250609_151415  install_with_sudo.sh  pyproject.toml  requirements.txt
.cursor/: .cursorignore  git-broke.mdc  ollamaherder.mdc  perplexing.mdc  puppetmaster.mdc
.cursor/rules/: friendly-advice.mdc  good-memory.mdc  record-your-work.mdc
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  publish.yml  security.yml
.herd/: log.txt  undo_log.json
.herd/analysis/: report.md
.herd/snippets/: run_herd_snippets.md
.herd/snippets/code_snippets/: BACKLOG_snippets.md  OpenStreetMap_snippets.md  __init___snippets.md  __main___snippets.md  _carbon_api_snippets.md  _football_api_snippets.md  _geocode_maps_snippets.md  _guardian_api_snippets.md  _openstates_api_snippets.md  _openweather_api_snippets.md  _phone_verify_snippets.md  _scrapestack_api_snippets.md  _tax_api_snippets.md  _windy_api_snippets.md  academic_snippets.md  accessibility_utils_snippets.md  ai_provider_snippets.md  airquality_api_snippets.md  alt-text_snippets.md  alt_snippets_snippets.md  analysis_snippets.md  analyze_schemas_snippets.md  analyzer_snippets.md  animations_snippets.md  anthropic_api_snippets.md  anthropic_snippets.md  api_analyzer_snippets.md  api_keys_snippets.md  api_utilities_snippets.md  app_snippets.md  applecore_snippets.md  arXiv_snippets.md  arxiv_snippets.md  assistant_snippets.md  bar_snippets.md  base_snippets.md  bbc_news_snippets.md  bc_news_snippets.md  belter_snippets.md  belters_server_snippets.md  (+241 more)
inbox/.herd/: undo_log.json
inbox/.herd/citations/: CITATIONS.mla.bib
inbox/utils/: error_cohere_module_not_available.py
scripts/: prepare_release.py  publish_help.sh  publish_to_pypi.sh  publish_to_test_pypi.sh.backup.20250609_151415  validate_package.py
snippets/: api_interactions.md
src/: config.json  error_processing_volumes_galactus_dev_herd_src_config_json_with_cohere_name_kwargs_is_not_defined.json
src/herd_ai/: __init__.py  __main__.py  citations.py  cli.py  config.py  docs.py  herd.py  idealize.py  image_processor.py  rename.py  scrambler.py  snippets.py  wrapper.py
src/herd_ai/utils/: __init__.py  ai_provider.py  analysis.py  cache.py  code_executor.py.backup.20250609_151416  cohere.py  config.py  dedupe.py  file.py  gemini.py  media.py  mistral.py  ollama.py  perplexity.py  scrambler.py  undo_log.py  xai.py
static/css/: herd_gui.css
static/js/: herd_gui.js
storage/: herd_tools.py
storage/debug_files/: error_processing_volumes_galactus_dev_herd_src_herd_ai_cli_py_with_cohere_name_kwargs_is_not_defined.py
storage/gui/: herd_imageprocessor.py
templates/: herd_gui.html
toollama/: CHANGELOG.md  FUNDING.yml  Modelfile.translator  README.md.backup.20250609_151415  coze_export.json  index.html  newplan.md  package-lock.json  plan.md  progress.md  pytest.ini  requirements.txt  server.py  setup.py  tool_archive_wayback.py
toollama/.cursor/rules/: friendly-advice.mdc  mentor.mdc  obedience.mdc  record-your-work.mdc
toollama/API/: Modelfile.drummer-search  README.md  anthropic.html  app.py.tmp  download_model.py  local_llm_providers.md  nohup.out  requirements.txt  run_api.sh  server.py  test_document.txt
toollama/API/--storage/: camina_search_runner.py  drummer-websearch.html  grokked.html  mcp_server.py  requirements-tools.txt  requirements.txt  simple_pil_test.py  simple_requests.py  test_api.sh.backup.20250609_151415  test_coze_only.sh.backup.20250609_151415  test_image_processing.py  test_lmstudio_direct.py  test_mlx.py  test_mlx_inference.py  test_models.sh.backup.20250609_151415  test_pil.py  test_providers.sh.backup.20250609_151415  test_requests.py  websage_demo.py  websage_tools.py
toollama/API/api/: README.md  app.py  config.py  test.txt
toollama/API/api-schema/: IPAPI_lookup.yaml  agify.yaml  dad_joke_api.yaml  fbi_wanted.yaml  gumroad.yaml  hipster_ipsum.yaml  kanye_rest.yaml  keymate_news.yaml  open_brewery.yaml  tronald_rump.yaml  urban_dictionary.yaml  windy_webcams.yaml  xkcd.yaml
toollama/API/api-tools/: multi_archive_server.py  wayback_machine_server.py
toollama/API/dev/: lmstudio.py
toollama/API/docs/: API_DOCUMENTATION.md  API_PROJECT_PLAN.md  CAMINA_SEARCH_README.md  CHANGELOG.md  README.md.backup.20250609_151416  README_WEBSEARCH_UPDATE.md  README_WEB_SEARCH.md
toollama/API/mlx/: index.html
toollama/API/static/: app.js  index.html  styles.css
toollama/API/test_results/: _research_google-scholar?query=natural%20language%20processing&max_results=2.json  _research_pubmed.json  _research_pubmed?query=covid%20vaccination&max_results=2.json  _research_semantic-scholar.json  _research_semantic-scholar?query=machine%20learning&limit=2&year=2023.json  image_generation_gemini.json  image_generation_openai.json  image_generation_xai.json
toollama/WORKING/: applecore.py  requirements.txt
toollama/WORKING/cli/: cohere.py  (+5 more)
toollama/finished/: belter.py  deep_infinite.py  gumroad_curl.txt  keys.txt  ollama_arxiv.py  ollama_coderunner.py  ollama_dataproc.py  ollama_document.py  ollama_finance.py  ollama_infinite.py  ollama_knowledge.py  ollama_scrape.py  ollama_timecalc.py  ollama_wayback.py  ollama_web.py
toollama/fresh_venv/: pyvenv.cfg
toollama/moe/: QUICKSTART.md  README.md  __init__.py  cli.py  client.py  moe.py  project_plan.md  requirements.txt
toollama/prompts/: api_analyzer.py  coze_analyzer.py
toollama/soon/: schema_notion.md
toollama/storage/: BACKLOG.html  Caddyfile  app.py  manifest.json  model_info.html  models.js  models.json  models.py  old_main.html  progress.html  proxy_anthropic_chat.py  r1.html  requirements.txt  script.js  test_api.py  tunnel_info.json  update_models.py
toollama/styles/: animations.css  components.css  containers.css  messages.css  select2.css  styles.css
toollama/tests/: conftest.py
~/herd_temp/: .gitattributes  .gitignore
(+730 files in other folders)
